<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trailbook.trailbook.recording.ActivityStartRun">

    <TextView
        android:id="@+id/tv_new_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/new_run_of"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_start_run_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="end"
        android:text="@string/contact"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_start_run_contact"
        app:layout_constraintEnd_toStartOf="@+id/et_start_run_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_start_run_contact" />

    <EditText
        android:id="@+id/et_start_run_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_start_run_contact"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_run_display" />

    <TextView
        android:id="@+id/tv_start_run_autofinish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="end"
        android:text="@string/auto_finish_hrs"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_start_run_autofinish"
        app:layout_constraintEnd_toStartOf="@+id/et_start_run_autofinish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_start_run_autofinish" />

    <EditText
        android:id="@+id/et_start_run_autofinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_autofinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_start_run_autofinish"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_run_required" />

    <Button
        android:id="@+id/btn_start_run"
        style="@style/ButtonRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_run"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_start_run_autofinish" />

    <TextView
        android:id="@+id/tv_start_run_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/required_colon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_run" />

    <TextView
        android:id="@+id/tv_start_run_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/display_colon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_run" />

</android.support.constraint.ConstraintLayout>