<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trailbook.app.recording.ActivityRecording">

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_new_trail"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_start_trailname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/trail_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_start_trailname"
        app:layout_constraintEnd_toStartOf="@+id/et_start_trailname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_start_trailname"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/et_start_trailname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_required" />

    <TextView
        android:id="@+id/tv_start_autofinish"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/auto_finish_hrs"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_start_autofinish"
        app:layout_constraintEnd_toStartOf="@+id/et_start_autofinish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_start_autofinish" />


    <Button
        android:id="@+id/btn_start"
        style="@style/ButtonRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_trail"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_start_autofinish" />

    <EditText
        android:id="@+id/et_start_autofinish"
        android:maxLength="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_autofinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/et_start_trailname" />

    <!--<TextView-->
        <!--android:id="@+id/tv_start_optional"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:text="@string/optional_colon"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/btn_start" />-->
    <!--<TextView-->
        <!--android:id="@+id/tv_start_contact"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:gravity="end"-->
        <!--android:text="@string/contact"-->
        <!--android:textSize="18sp"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/et_start_contact"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/et_start_contact"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/et_start_contact" />-->
    <!--<EditText-->
        <!--android:id="@+id/et_start_contact"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:ems="10"-->
        <!--android:inputType="number"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toEndOf="@+id/tv_start_contact"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/tv_start_optional" />-->

    <TextView
        android:id="@+id/tv_start_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/required_colon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start" />

</android.support.constraint.ConstraintLayout>